[package]
name = "t2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bellman = "0.9.0"
rand = "0.8.5"
rand_core = "0.6.2"
rand_chacha = "0.3.0"
secp256k1-zkp = "0.7.0"
secp256k1-sys = "0.8.0"
secp256k1 = "0.26.0"
ff = "0.13.0"